--- a/jbot-core/pom.xml
+++ b/jbot-core/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>jackson-databind</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.polyglot</groupId>
+            <artifactId>polyglot</artifactId>
+            <version>24.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
