refactor(jbot-impl):重构插件管理和事件处理逻辑
- 移除 DefaultEventManager 中冗余的 PluginManager 引用
- 在 PluginFactory 中添加对事件类的引用
- 完善 PluginLoader 中的插件配置加载逻辑
- 优化 Main 类中的错误日志输出
- 更新 jbot.json5 中的适配器配置
- 调整 pom.xml 中的依赖范围

--- a/jbot-impl/pom.xml
+++ b/jbot-impl/pom.xml
@@ -39,7 +39,7 @@
             <groupId>x.ovo.jbot.runtime</groupId>
             <artifactId>jbot-js-provider</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
