feat(plugin): 添加复读机插件
- 新增 reread 插件，实现群聊中的复读功能
- 移除 jsTest 插件，改为 reread 插件
- 更新 listener.js 和 test.js，实现复读逻辑
- 添加 plugin.json配置文件

--- a/jbot-plugins/jbot-plugin-reread/pom.xml
+++ b/jbot-plugins/jbot-plugin-reread/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>x.ovo.jbot.plugin</groupId>
-    <artifactId>jbot-plugin-jsTest</artifactId>
+    <artifactId>jbot-plugin-reread</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
