feat(plugin): 添加 KFC疯狂星期四插件
- 新增 KfcListener 类用于监听和处理与 KFC 相关的消息事件
- 实现了从 API 获取 KFC 疯狂星期四信息并回复用户的功能
- 添加了 KfcPlugin 类作为插件入口，返回 KfcListener 实例

--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -14,6 +14,7 @@
     <description>jbot插件</description>
     <modules>
         <module>jbot-plugin-pm</module>
+        <module>jbot-plugin-kfc</module>
     </modules>
 
     <dependencies>
