--- a/jbot-impl/pom.xml
+++ b/jbot-impl/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>vertx-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-redis-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.dromara.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
