--- a/jbot-impl/src/main/resources/jbot.json5
+++ b/jbot-impl/src/main/resources/jbot.json5
@@ -4,7 +4,8 @@
     "debug": false,                                     // 是否启用调试模式
     "debugConfig": {},                                  // 调试模式配置
     "saveMedia": false,                                 // 是否保存图片等媒体文件
-    "owner": ""                                         // bot管理员
+    "owner": "",                                        // bot管理员
+    "redis": "redis://[:password@]host[:port][/db-number]"  // redis连接字符串
   },
   // 登录相关配置
   "login": {
