feat(plugin): 添加多个新插件并优化现有插件
- 新增 EpicPlugin、MemoryPlugin、MusicPlugin、NewsPlugin 和 OnsetPlugin
- 优化 KfcListener 和 RereadPlugin 的实现
- 更新项目结构和依赖管理

--- a/jbot-plugins/jbot-plugin-epic/pom.xml
+++ b/jbot-plugins/jbot-plugin-epic/pom.xml
@@ -10,6 +10,14 @@
     </parent>
 
     <groupId>x.ovo.jbot.plugin</groupId>
-    <artifactId>jbot-plugin-reread</artifactId>
+    <artifactId>jbot-plugin-epic</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.dromara.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
