--- a/jbot-plugins/jbot-plugin-news/pom.xml
+++ b/jbot-plugins/jbot-plugin-news/pom.xml
@@ -5,13 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>x.ovo.jbot</groupId>
-        <artifactId>jbot-adapter</artifactId>
+        <artifactId>jbot-plugins</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>jbot-adapter-web</artifactId>
-    <description>jbot的web适配器</description>
+    <groupId>x.ovo.jbot.plugin</groupId>
+    <artifactId>jbot-plugin-news</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.dromara.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
