feat(adapter): 新增 APad适配器
- 移除 WebAdapter 类
- 新增 APadAdapter 和相关服务类
- 更新项目结构和依赖

--- a/jbot-adapter/pom.xml
+++ b/jbot-adapter/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>jbot-adapter-gewe</module>
         <module>jbot-adapter-native</module>
-        <module>jbot-adapter-web</module>
+        <module>jbot-adapter-apad</module>
     </modules>
 
     <dependencies>
