--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,7 @@
         <module>jbot-impl</module>
         <module>jbot-adapter</module>
         <module>jbot-plugins</module>
-        <module>jbot-plugins/jbot-plugin-pm</module>
         <module>jbot-js-provider</module>
-        <module>jbot-plugins/jbot-plugin-jsTest</module>
     </modules>
 
     <properties>
@@ -61,5 +59,27 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+<!--                    <enablePreview>true</enablePreview>-->
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.36</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
