build:重构项目结构并添加 jbot-build 模块
- 新增 jbot-build 模块，用于定义项目版本和全局配置
- 更新项目结构，使用 jbot-parent 作为父 POM
- 修改各模块的 POM 文件，统一版本号为 ${revision}
- 更新依赖版本和分类器使用变量替换
- 调整插件配置，引入 easyj-maven-plugin

--- a/jbot-adapter/jbot-adapter-apad/pom.xml
+++ b/jbot-adapter/jbot-adapter-apad/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <groupId>x.ovo.jbot</groupId>
         <artifactId>jbot-adapter</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>jbot-adapter-apad</artifactId>
@@ -20,7 +21,8 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>ffmpeg</artifactId>
-            <classifier>windows-x86_64</classifier>
+            <version>${ver.ffmpeg}-${ver.javacv}</version>
+            <classifier>${build.platform}</classifier>
         </dependency>
     </dependencies>
 
