--- a/jbot-core/pom.xml
+++ b/jbot-core/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>x.ovo.jbot</groupId>
-        <artifactId>Jbot</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>jbot-parent</artifactId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>jbot-core</artifactId>
