--- a/jbot-adapter/jbot-adapter-gewe/pom.xml
+++ b/jbot-adapter/jbot-adapter-gewe/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>x.ovo.jbot</groupId>
         <artifactId>jbot-adapter</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
