--- a/jbot-impl/pom.xml
+++ b/jbot-impl/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>x.ovo.jbot</groupId>
-        <artifactId>Jbot</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>jbot-parent</artifactId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>jbot-impl</artifactId>
@@ -46,8 +47,8 @@
         <dependency>
             <groupId>x.ovo.jbot.runtime</groupId>
             <artifactId>jbot-js-provider</artifactId>
-            <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
