--- a/jbot-plugins/jbot-plugin-onset/pom.xml
+++ b/jbot-plugins/jbot-plugin-onset/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <groupId>x.ovo.jbot</groupId>
         <artifactId>jbot-plugins</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>x.ovo.jbot.plugin</groupId>
