feat(core): 优化适配器加载逻辑并添加异常处理
- 在 Context 类中添加全局异常处理器
- 优化 JBotConfig 类中的默认配置文件生成逻辑
- 新增 SpiClassLoader 类，用于加载适配器 jar
- 重构 JBotImpl 类中的适配器加载逻辑，提高错误处理能力
- 更新配置文件和日志配置，调整输出级别和格式

--- a/jbot-impl/src/main/resources/jbot.json5
+++ b/jbot-impl/src/main/resources/jbot.json5
@@ -22,6 +22,12 @@
   },
   // 适配器相关配置
   "adapter": {
-    "name": "x.ovo.jbot.adapter.gewe.GeweAdapter"
+    "name": "apad-adapter",
+    "mode": "release",
+    "port": 9000,
+    "redis_host": "127.0.0.1",
+    "redis_port": 6379,
+    "redis_pwd": "",
+    "redis_db": 0
   }
 }
