--- a/jbot-impl/src/main/resources/plugin.json5
+++ b/jbot-impl/src/main/resources/plugin.json5
@@ -15,9 +15,7 @@
       "priority": 10,
       "next": true,
       "permissions": [
-        "username:@:wxid_fneu92389833vds,nickname:@:Ooops",
-        "nickname:@:Ooops",
-        "remark:@:大号"
+        "nickname:@:Ooops"
       ]
     }
   }
