feat(core): 重构代码并添加新功能
- 重构了 APadAdapter 类的 onInit 方法，优化了配置文件处理逻辑
- 新增 startServer 方法，用于启动协议服务
- 更新了资源文件处理方式，支持多平台构建
- 移除了 jbot-js-provider 依赖
- 添加了 maven-shade-plugin 配置，用于打包可执行 jar 文件

--- a/jbot-build/pom.xml
+++ b/jbot-build/pom.xml
@@ -15,7 +15,6 @@
     <properties>
         <revision>0.0.1</revision>
         <java.version>21</java.version>
-        <build.platform>windows-x86_64</build.platform>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -40,6 +39,69 @@
 
         <easyj-maven-plugin.version>1.1.5</easyj-maven-plugin.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>windows-x86_64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <build.platform>windows-x86_64</build.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux-x86_64</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <build.platform>linux-x86_64</build.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux-arm64</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <build.platform>linux-arm64</build.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac-x86_64</id>
+            <activation>
+                <os>
+                    <family>mac os x</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <build.platform>macosx-x86_64</build.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac-arm64</id>
+            <activation>
+                <os>
+                    <family>mac os x</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <build.platform>macosx-arm64</build.platform>
+            </properties>
+        </profile>
+    </profiles>
 
 
     <build>
