--- a/jbot-adapter/pom.xml
+++ b/jbot-adapter/pom.xml
@@ -42,6 +42,25 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <excludes>
+                    <exclude>**/windows-x86_64/**</exclude>
+                    <exclude>**/linux-x86_64/**</exclude>
+                    <exclude>**/linux-arm64/**</exclude>
+                    <exclude>**/macosx-x86_64/**</exclude>
+                    <exclude>**/macosx-arm64/**</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/${build.platform}</directory>
+<!--                <targetPath>${project.build.outputDirectory}</targetPath>-->
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -56,12 +75,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <finalName>${project.artifactId}-${build.platform}</finalName>
+                    <shadedClassifierName>${build.platform}</shadedClassifierName>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
-<!--                    <transformers>-->
-<!--                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-<!--                            <mainClass>x.ovo.wechat.bot.impl.Main</mainClass>-->
-<!--                        </transformer>-->
-<!--                    </transformers>-->
                 </configuration>
             </plugin>
         </plugins>
