--- a/jbot-impl/pom.xml
+++ b/jbot-impl/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>hutool-http</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.dromara.hutool</groupId>
+            <artifactId>hutool-json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
