refactor(jbot-plugins): reread插件重命名为js_example

--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>jbot-plugin-pm</module>
         <module>jbot-plugin-kfc</module>
-        <module>jbot-plugin-reread</module>
+        <module>jbot-plugin-js_example</module>
         <module>jbot-plugin-memory</module>
         <module>jbot-plugin-news</module>
         <module>jbot-plugin-onset</module>
