feat(plugin): 添加 Java 实现的复读机插件

--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -22,6 +22,7 @@
         <module>jbot-plugin-onset</module>
         <module>jbot-plugin-epic</module>
         <module>jbot-plugin-music</module>
+        <module>jbot-plugin-reread</module>
     </modules>
 
     <dependencies>
