feat(plugins): 添加群成员进群提示插件
- 新增 TipsExecutor 类实现命令行操作，支持添加、编辑和删除提示信息
- 实现 TipsPlugin 类处理群消息事件，根据配置发送进群提示
- 添加配置文件 config.json5 和插件信息文件 plugin.json
- 在父项目 pom.xml 中增加子模块引用

--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -23,6 +23,7 @@
         <module>jbot-plugin-epic</module>
         <module>jbot-plugin-music</module>
         <module>jbot-plugin-reread</module>
+        <module>jbot-plugin-tips</module>
     </modules>
 
     <dependencies>
