--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -24,6 +24,7 @@
         <module>jbot-plugin-music</module>
         <module>jbot-plugin-reread</module>
         <module>jbot-plugin-tips</module>
+        <module>jbot-plugin-card</module>
     </modules>
 
     <dependencies>
