add - 云盘资源更新订阅-阿里云盘

--- a/jbot-plugins/pom.xml
+++ b/jbot-plugins/pom.xml
@@ -25,6 +25,7 @@
         <module>jbot-plugin-reread</module>
         <module>jbot-plugin-tips</module>
         <module>jbot-plugin-card</module>
+        <module>jbot-plugin-cloudpan_subscribe</module>
     </modules>
 
     <dependencies>
