--- a/jbot-impl/src/main/resources/jbot.json5
+++ b/jbot-impl/src/main/resources/jbot.json5
@@ -5,7 +5,7 @@
     "debugConfig": {},                                  // 调试模式配置
     "saveMedia": false,                                 // 是否保存图片等媒体文件
     "owner": "",                                        // bot管理员
-    "redis": "redis://[:password@]host[:port][/db-number]"  // redis连接字符串
+    "redis": "redis://z@127.0.0.1:6379/0"  // redis连接字符串
   },
   // 登录相关配置
   "login": {
